# SyncPrim

./: CMakeLists.txt  README.md
sync_prim/: CMakeLists.txt
sync_prim/inc/: auto_reset_event.h  base_reset_event.h  count_down_event.h  manual_reset_event.h
sync_prim/src/: auto_reset_event.cpp  base_reset_event.cpp  count_down_event.cpp  manual_reset_event.cpp
test/: CMakeLists.txt  count_down_event_tests.cpp  manual_reset_event_tests.cpp
test/src/: count_down_event_tests.cpp  manual_reset_event_tests.cpp
